# cargo-template

./: Cargo.toml  README.md  cargo-generate.toml
.github/workflows/: manual-bump-patch.yml
