[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
description = ""
repository = "https://github.com/{{authors}}/{{project-name}}"
license = "MIT"
readme = "README.md"
# see https://crates.io/category_slugs
categories = [""]
# see https://crates.io/keywords
keywords = [""]

[dependencies]
